name:                wai-jwt-auth-middleware
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CaptJakk/wai-jwt-auth-middleware#readme
license:             BSD3
license-file:        LICENSE
author:              Keagan McClelland
maintainer:          keagan.mcclelland@gmail.com
copyright:           (c) 2018 Keagan McClelland
category:            Wai
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson               >= 1.2.4.0  && < 1.5
                     , asn1-encoding       >= 0.9.5    && < 0.10
                     , asn1-types          >= 0.3.2    && < 0.4
                     , base                >= 4.7      && < 5
                     , bytestring          >= 0.10.8   && < 0.11
                     , composition-prelude >= 1.3.0.8  && < 2
                     , cryptonite          >= 0.25     && < 0.26
                     , file-embed          >= 0.0.10.1 && < 0.0.11
                     , http-types    >= 0.12     && < 0.13
                     , jose-jwt      >= 0.7      && < 0.8
                     , mtl           >= 2.2.2    && < 3
                     , pem           >= 0.2.4    && < 0.3
                     , protolude     >= 0.2.2    && < 0.3
                     , transformers  >= 0.5.2.0  && < 0.6
                     , wai           >= 3.2      && < 4
                     , x509          >= 1.7      && < 2
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  exposed-modules:
    Network.Wai.Middleware.JwtAuth
